# SubstitutionsParser

./: pyproject.toml  requirements.txt
src/: constants.py  misc.py
src/schedule_parser/: __init__.py  models.py  utils.py
tests/: _test_utils.py  test_bells.py  test_schedule.py  test_substitutions.py
