[project]
name = "schedule_parser"
version = "1.0.0"
description = "Ты думал тут что-то будет?"
authors = [
    { name = "Denis Titovets <den232titovets@yandex.ru>" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker (==1.9.0)",
    "certifi (==2025.11.12)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "et-xmlfile (==2.0.0)",
    "flask (==3.1.2)",
    "idna (==3.11)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "openpyxl (==3.1.5)",
    "pillow (==12.0.0)",
    "psutil (==7.1.3)",
    "pyquoks (==2.1.1)",
    "requests (==2.32.5)",
    "urllib3 (==2.5.0)",
    "waitress (==3.0.2)",
    "werkzeug (==3.1.4)"
]


[build-system]
requires = ["poetry-core (>=2.0.0, <3.0.0)"]
build-backend = "poetry.core.masonry.api"
